# cl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  TODO_diag.md
include/: cl.hxx
include/cl/: argument_base.hxx  arithmetic_base.hxx  boolean_argument.hxx  command.hxx  command_base.hxx  command_data.hxx  custom_argument.hxx  default_reader.hxx  diagnostics.hxx  diagnostics_state.hxx  enum_argument.hxx  enumerations.hxx  flag_argument.hxx  floating_argument.hxx  free_argument.hxx  global_option.hxx  grammar.hxx  handler.hxx  handler_base.hxx  handler_data.hxx  help_argument.hxx  integer_argument.hxx  local_option.hxx  meta.hxx  multi_argument.hxx  multi_base.hxx  multi_handler.hxx  multi_value_base.hxx  option_base.hxx  options.hxx  parser_action.hxx  parser_state.hxx  parser_utility.hxx  positional_argument.hxx  readable_base.hxx  string_argument.hxx  switch_argument.hxx  tags.hxx  utility.hxx  value_base.hxx  (+1 more)
include/cl/diagnostics/: combined_message.hxx  default_output.hxx  default_renderer.hxx  fixit_hint.hxx  location_message.hxx  low_level.hxx  message.hxx  output.hxx  renderer.hxx  simple_message.hxx  source_view.hxx  types.hxx
src/: combined_message.cxx  command_base.cxx  default_output.cxx  default_renderer.cxx  diagnostics.cxx  fixit_hint.cxx  handler.cxx  handler_base.cxx  location_message.cxx  low_level.cxx  parser_utility.cxx  renderer.cxx  simple_message.cxx  source_view.cxx  types.cxx  utility.cxx
txt/: check.md  error_mode.md  groups.md  options.md
